--- a/google.html
+++ b/google.html
@@ -1,50 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="description" content="Google">
-	<meta name="author" content="Sniedze Spele">
-<title>Google</title>
-<link href="googlestyle.css" rel="stylesheet" type="text/css">
-</head>
+  <!DOCTYPE html>
+  <html>
+    <head>
+	    <meta charset="UTF-8">
+	    <meta name="description" content="Google">
+	    <meta name="author" content="Sniedze Spele">
+        <title>Google</title>
+        <link href="googlestyle.css" rel="stylesheet" type="text/css">
+    </head>
 	<body>
-	<div id="container">
-	<h1></h1>
-	<header>
-			<a href="https://www.google.com/" target="blank">Gmail</a>
-			<a href="https://www.google.lv/" target="blank">Attēli</a>
+	  <div id="container">
+	    <header>
+			<a style="text-decoration: none;color: grey; padding: 15px" href="https://www.google.com/" target="blank">Gmail</a>
+			<a style="text-decoration: none;color: grey; padding: 15px" href="https://www.google.lv/" target="blank">Attēli</a>
 		    <button style="background:#f3f2f8; height:35px; width: 90px; " >Ieiet</button>
-	</header>
-	<div class="logo">
+	    </header>
+	  <div class="logo">
 	        <img src="C:\Users\spele\Desktop\web.kursi\google.png"> 
-	</div>
-	<div class="container-form">
+	  </div>
+	  <div class="container-form">
 		<form>
 			<input style="width: 500px; height: 40px" type="text" name="search" placeholder="Meklējiet Google tīklā vai ievadiet URL">
 			<br><br><button style="width: 200px;height: 40px; position: absolute; top: 85%;
-  left: 50%;">Es ticu veiksmei</button>
+             left: 50%;">Es ticu veiksmei</button>
 			<button style="width: 200px;height: 40px; position:absolute; top: 85%; left: 10%">Google meklēšana</button>
 		</form>
-	</div>
-     <div class="link2">
-		<a href="https://ads.google.com/intl/lv_lv/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Reklamēšana</a>
-		<a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Uzņēmējdarbība</a>
-		<a href="https://www.google.com/intl/lv_lv/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">Plašāka informācija</a>
-	</div>
-    <div class=link3>
-    	<a href="https://policies.google.com/privacy?hl=lv&gl=lv">Konfidencialitāte</a>
-    	<a href="https://policies.google.com/terms?hl=lv&gl=lv">Noteikumi</a>
-<div class="dropup">
-  <button class="dropbtn">Iestatijumi</button>
-  <div class="dropup-content">
-    <a href="#">Meklēšanas iestatijumi</a>
-    <a href="#">Izverstā meklēšana</a>
-    <a href="#">Jūsu dati pakalpojumā meklēšana</a>
-    <a href="#">Vēsture</a>
-    <a href="#">Meklēšanas palīdzība</a>
-    <a href="#">Sūtīt atsauksmes</a>
-  </div>
-    </div>
+	  </div>
+      <div class="link2">
+		   <a style="text-decoration: none;color: grey; padding: 15px" href="https://ads.google.com/intl/lv_lv/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Reklamēšana</a>
+		   <a style="text-decoration: none;color: grey; padding: 15px" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Uzņēmējdarbība</a>
+		   <a style="text-decoration: none;color: grey; padding: 15px" href="https://www.google.com/intl/lv_lv/about/?utm_source=google.com&utm_medium=referral&utm_campaign=hp-footer&fg=1">Plašāka informācija</a>
+	  </div>
+      <div class=link3>
+    	  <a style="text-decoration: none;color: grey; padding: 15px" href="https://policies.google.com/privacy?hl=lv&gl=lv">Konfidencialitāte</a>
+    	  <a style="text-decoration: none;color: grey; padding: 15px" href="https://policies.google.com/terms?hl=lv&gl=lv">Noteikumi</a>
+      <div class="dropup">
+          <button class="dropbtn">Iestatijumi</button>
+      <div class="dropup-content">
+          <a href="#">Meklēšanas iestatijumi</a>
+          <a href="#">Izverstā meklēšana</a>
+          <a href="#">Jūsu dati pakalpojumā meklēšana</a>
+          <a href="#">Vēsture</a>
+          <a href="#">Meklēšanas palīdzība</a>
+          <a href="#">Sūtīt atsauksmes</a>
+      </div>
+      </div>
 	</body>
 <html/>
 	
