--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		    <button style="background:#f3f2f8; height:35px; width: 90px; " >Ieiet</button>
 	    </header>
 	  <div class="logo">
-	        <img src="C:\Users\spele\Desktop\web.kursi\google.png"> 
+	        <img href="google.png"> 
 	  </div>
 	  <div class="container-form">
 		<form>
